meegotouchhome (0.22.8~1) unstable; urgency=low

  * [UNRELEASED]
  * Fixes: NB#204512 - Change pinch gesture handling to use totalScaleFactor instead of scaleFactor
  * Fixes: NB#206700 - minimizing window, meegotouchhome crashes

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Mon, 22 Nov 2010 17:54:10 +0200

meegotouchhome (0.22.7-1) unstable; urgency=low

  * Fixes: NB#202259 - Each MotionEvent causes _NET_WM_ICON_GEOMETRY update for a window in switcher

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Mon, 22 Nov 2010 17:53:26 +0200

meegotouchhome (0.22.6-1) unstable; urgency=low

  * Fixes: NB#203728 - Recents view freezes and shows only weird minimal icons

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Fri, 12 Nov 2010 11:41:26 +0200

meegotouchhome (0.22.5-1) unstable; urgency=low

  * Fixes: NB#202257 - Device reboots after pressing Ctrl-q four times

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Thu, 04 Nov 2010 14:31:11 +0300

meegotouchhome (0.22.4-1) unstable; urgency=low

  * Fixes: NB#190081 - call and search applications open on using hkb keys(* and ')') quickly in home screen

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Thu, 28 Oct 2010 16:50:13 +0300

meegotouchhome (0.22.3-1) unstable; urgency=low

  * Don't rotate the screen while switcher mode change is in progress

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Wed, 20 Oct 2010 13:33:44 +0300

meegotouchhome (0.22.2-1) unstable; urgency=low

  * Fixes: NB#197319 - Duihome hogs CPU after vigorous installing

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Mon, 18 Oct 2010 09:34:26 +0300

meegotouchhome (0.22.1-1) unstable; urgency=low

  * Fixes: NB#194052 - Object names used to change style for progress indicators
  * Fixes: NB#194106 - Launcher progress indicator spinner keeps spinning even after the application has started
  * Fixes: NB#186716 - Homescreen updates the display when touched even if nothing happens
